docs/7.52/md/abentable_functions.md
---
title: "Table Functions"
description: |
  Table functions are part of the predefined functions(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuilt_in_functions.htm). The following table functions are possible: -   lines - Row function(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendescriptive_functions_t
version: "7.52"
category: "data-structures"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_functions.htm"
abapFile: "abentable_functions.htm"
keywords: ["do", "try", "data", "internal-table", "abentable", "functions"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) →  [Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenitab.htm) →  [Expressions and Functions for Internal Tables](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_processing_expr_func.htm) → 

Table Functions

Table functions are part of the [predefined functions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbuilt_in_functions.htm). The following table functions are possible:

-   [lines - Row function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendescriptive_functions_table.htm)

-   [line\_index - Index function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenline_index_function.htm)

Furthermore, the string function [concat\_lines\_of](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenconcatenation_functions.htm) expects an internal table as an argument; the predicate function [line\_exists](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenline_exists_function.htm) expects a [table expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abentable_expression_glosry.htm "Glossary Entry") or a [mesh path expression](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenmesh_path_expression_glosry.htm "Glossary Entry").

Note

Table functions can be used in suitable [operand positions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenexpression_positions.htm), for example directly as an operand of [arithmetic](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenarithmetic_expression_glosry.htm "Glossary Entry") or [relational expressions](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenrelational_expression_glosry.htm "Glossary Entry").

Continue
[lines - Row Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendescriptive_functions_table.htm)
[line\_index - Index Function](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenline_index_function.htm)