docs/7.57/md/abentable_functions.md
---
title: "Hint"
description: |
  Table functions can be used in suitable operand positions(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexpression_positions.htm), for example directly as an operand of arithmetic(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_expression_glosry.htm 'Gl
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_functions.htm"
abapFile: "abentable_functions.htm"
keywords: ["do", "if", "try", "data", "internal-table", "abentable", "functions"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) →  [Internal Tables (itab)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenitab.htm) →  [itab - Expressions and Functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_processing_expr_func.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: itab - Table Functions \(table_func\), ABENTABLE_FUNCTIONS, 757%0D%0A%0D%0AError:%0D%0A
%0D%0A%0D%0A%0D%0ASuggestion for improvement:)

itab - Table Functions (table\_func)

Table functions are part of the [built-in functions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbuilt_in_functions.htm). The following table functions are possible:

-   [lines - Line Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendescriptive_functions_table.htm)
-   [line\_index - Index Function](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenline_index_function.htm)

Furthermore, the string function [concat\_lines\_of](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenconcatenation_functions.htm) expects an internal table as an argument and the predicate function [line\_exists](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenline_exists_function.htm) expects a [table expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abentable_expression_glosry.htm "Glossary Entry") or a [mesh path expression](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenmesh_path_expression_glosry.htm "Glossary Entry").

Hint

Table functions can be used in suitable [operand positions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenexpression_positions.htm), for example directly as an operand of [arithmetic](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenarithmetic_expression_glosry.htm "Glossary Entry") or [relational expressions](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenrelational_expression_glosry.htm "Glossary Entry").

Continue
[table\_func - lines](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendescriptive_functions_table.htm)
[table\_func - line\_index](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenline_index_function.htm)